added catncheese project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>Sylvio Mafort</title>
@@ -130,6 +125,53 @@
   </article>
 </div> -->
 
+<!-- CatsNCheese -->
+<div class="col-4">
+  <article class="col-6 col-12-xsmall work-item">
+    <h2 id="project-title">Cats n' Cheese</h2>
+    <a href="#" class="image fit thumb modal-trigger" data-modal="catsModal">
+      <img src="images/catsncheese_screenshot.jpg" alt="Cats and Cheese Screenshot" />
+    </a>
+    <h3>Cats n' Cheese</h3>
+    <div class="row aln-center actions-container">
+      <a id="rounded" class="modern-button" href="https://cats-n-cheese.vercel.app/">Live Website</a>
+      <a id="rounded" class="modern-button" href="https://github.com/sylfort/cats-n-cheese">Github</a>
+    </div>
+    <div class="technologies-container">
+      <h4 class="technologies-heading">Technologies used:</h4>
+      <div class="technologies">
+        <button class="tech-button" disabled>JavaScript</button>
+        <button class="tech-button" disabled>React</button>
+        <button class="tech-button" disabled>Next.js</button>
+        <button class="tech-button" disabled>Tailwind CSS</button>
+        <button class="tech-button" disabled>Vercel</button>
+      </div>
+    </div>
+  </article>
+</div>
+
+<!-- CatsNCheese Modal -->
+<div id="catsModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div class="about-p">
+      <p>Cats n' Cheese is a single-player game where players act as mice stealing cheese from cats.</p>
+      <h4>Key Features:</h4>
+      <ul>
+        <li>Built in two weekends for the MeltingHack Sprint#2 Hackathon</li>
+        <li>Asynchronously worked with 4 teammates from different continents to deliver the project in a Agile manner</li>
+      </ul>
+      <h4>Technologies Used:</h4>
+      <ul>
+        <li>React for client-side rendering</li>
+        <li>Tailwind CSS for rapid UI development</li>
+        <li>Vercel for deployment and hosting</li>
+      </ul>
+      <!-- <p>This project demonstrates my ability to work with modern full-stack technologies, integrate AI services, and deploy scalable applications on cloud platforms.</p> -->
+    </div>
+  </div>
+</div>
+
 <!-- Guestbook -->
 <div class="col-4">
   <article class="col-6 col-12-xsmall work-item">
@@ -157,7 +199,7 @@
   </article>
 </div>
 
-<!-- Modal -->
+<!-- Guestbook Modal -->
 <div id="guestbookModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
