updated color scheme

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
-            I'm a Full-Stack Web Dev 
+            I'm <span id="color-effect">a Full-Stack Web Dev </span>
           </h2>		
         </header>
         <ul class="actions">
