changed header to Nihongo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a class="about" href="#about" data-i18n="nav.about">About me</a></li>
         <li><a class="work" href="#work" data-i18n="nav.projects">Projects</a></li>
         <li><a class="contact2" href="#contact" data-i18n="nav.contact">Contact</a></li>
-        <li><button id="langToggle" class="lang-button">🌐 EN</button></li>
+        <li><button id="langToggle" class="lang-button">🌐 日本語</button></li>
       </ul>
     </nav>
 
