fix h2 in japanese

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           ><img src="images/sylvio_optmized.webp" alt="images/avatar.jpg"
         /></a>
         <h1>
-          <strong data-i18n="header.greeting"></strong><br />
-          <span data-i18n="header.title"></span>
+          <strong data-i18n="header.greeting">Hello! I'm Sylvio,<br /></strong>A Full-Stack<br />
+          Web Developer<br />
         </h1>
       </div>
     </header>
@@ -46,17 +46,18 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2" data-i18n="main.intro">
+            I'm <span id="color-effect" data-i18n="header.title">a Full-Stack Web Dev</span>
           </h2>		
         </header>
         <ul class="actions">
           <li>
           <a id="margin-first-buttons" href="#work" class="margin-first-buttons button scroll-me work" data-i18n="main.cta.projects"
-            ></a
+            >Check out my recent projects</a
           >
           </li>
           <li>
             <a id="margin-first-buttons" href="#contact" class="button scroll-me contact m-left" data-i18n="main.cta.contact"
-              ></a
+              >Contact me</a
             >
             </li>
         </ul>
