--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 </section>
 
       <!-- Three -->
-      <section id="three">
+      <section id="contact">
         <h2 data-i18n="contact.title"></h2>
         <p data-i18n="contact.subtitle"></p>
         <div class="row">
