Update index.html remove p

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<p data-i18n="about.p1"></p>
 			<p data-i18n="about.p2"></p>
 			<p data-i18n="about.p3"></p>
-			<p data-i18n="about.p4"></p>
+<!-- 			<p data-i18n="about.p4"></p> -->
 			<p data-i18n="about.p5"></p>
 			<p data-i18n="about.p6"></p>
         
